--- a/dinein/package.json
+++ b/dinein/package.json
@@ -17,6 +17,8 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.17.2",
     "nodemon": "^2.0.15",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
     "pg": "^8.7.3"
   }
 }
